--- a/html/stock.html
+++ b/html/stock.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% extends "base_generic.html" %}
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Stock Return Information</title>
@@ -38,4 +39,47 @@
 </div>
 
 </body>
-</html>
+</html> -->
+
+
+{% block head_content %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+{% endblock %}
+
+
+{% block new_content %}
+<div class="container">
+  <h2>Stock Return Information</h2>
+  <table class="table table-dark table-striped">
+    <thead>
+      <tr>
+        <th>Stock Name</th>
+        <th>Market Price</th>
+        <th>Quantity</th>
+        <th>Buy Price</th>
+        <th>Returns</th>
+        <th>Link</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for si in stock %}
+      <tr>
+        {% for k,v in si.items %}
+        <td>
+          {% if k == "url" %}
+          <a href={{v}}>Click for details.</a>
+          {% else %}
+          {{v}}
+          {% endif %}
+
+        </td>
+        {% endfor %}
+      </tr>
+      {% endfor%}
+    </tbody>
+  </table>
+</div>
+{% endblock %}
